--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "sajjad385/hellopkg",
     "description": "This is a simple package to print hello",
+    "version": "1.0.0",
     "type": "library",
     "autoload": {
         "psr-4": {
@@ -14,5 +15,10 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "repositories": [], 
+    "license": [
+        "LGPL-2.1-only",
+        "GPL-3.0-or-later"
+    ]
 }
