--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,18 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.4"
+        "php": "^8.0"
     },
     "repositories": [],
     "license": [
         "LGPL-2.1-only",
         "GPL-3.0-or-later"
     ],
+    "extra": {},
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
     "prefer-stable": true
 }
