--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "autoload": {
         "psr-4": {
             "Sajjad385\\Hellopkg\\": "src/"
-        }
+        },
+        "files": [
+            "src/index.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
-            "Sajjad385\\Hellopkg\\Tests\\": "tests"
+            "\\Tests\\": "/Tests"
         }
     },
     "authors": [
@@ -34,5 +37,8 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    }
 }
