--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "\\Tests\\": "/Tests"
+            "\\Tests\\": "/tests"
         }
     },
     "authors": [
