--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,12 @@
             "\\Tests\\": "/tests"
         }
     },
+    "scripts": {
+        "test": "vendor\\bin\\phpunit",
+        "phpunit": "vendor/bin/phpunit",
+        "test-coverage": "vendor\\bin\\phpunit --coverage-html coverage",
+        "format": "vendor\\bin\\php-cs-fixer fix --allow-risky=yes"
+    },
     "authors": [
         {
             "name": "sajjad-xs",
