removed vendor folder

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,12 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "third-party/required-plugin": true,
+            "my-organization/*": true,
+            "unnecessary/plugin": false
+        }
     },
     "prefer-stable": true,
     "require-dev": {
